--- a/AmbChat/app/build.gradle
+++ b/AmbChat/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.ambientdigitalgroup.ambchat"
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -16,6 +16,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
 dependencies {
@@ -23,16 +30,28 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+
+    implementation 'com.android.support:support-v4:26.1.0'
+    //noinspection GradleCompatible
+    /* implementation 'com.google.firebase:firebase-core:11.8.0'*/
+    implementation 'com.firebaseui:firebase-ui:0.6.0'
+    /*implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.firebase:firebase-auth:11.6.0'*/
+
+    //noinspection GradleCompatible
+   /* implementation 'com.google.firebase:firebase-core:11.8.0'*/
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.google.gms:google-services:3.1.1'
-<<<<<<< Updated upstream
-=======
 
->>>>>>> Stashed changes
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.android.support:design:26.1.0'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
