--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+AmbChat/.idea/assetWizardSettings.xml
+AmbChat/.idea/caches/build_file_checksums.ser
+AmbChat/.idea/codeStyles/Project.xml
+AmbChat/.idea/misc.xml
