--- a/AmbChat/app/src/main/AndroidManifest.xml
+++ b/AmbChat/app/src/main/AndroidManifest.xml
@@ -15,20 +15,17 @@
         <activity android:name=".activities.StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.SignUp" />
-        <activity android:name=".activities.HomeActivity" />
         <!-- <activity android:name=".InforUserFragment" /> -->
         <activity android:name=".activities.SignInActivity" />
         <activity
             android:name=".activities.MainActivity"
             android:parentActivityName=".activities.StartActivity" />
-        <activity android:name=".activities.InforUserActivity" />
+        <activity android:name=".activities.InforUserActivity"></activity>
 
-
+        <activity android:name=".activities.SignUpActivity"></activity>
     </application>
 
 </manifest>
