--- a/AmbChat/app/src/main/AndroidManifest.xml
+++ b/AmbChat/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -19,11 +20,7 @@
             </intent-filter>
         </activity>
         <!-- <activity android:name=".InforUserFragment" /> -->
-        <activity
-            android:name=".fragments.MainFragment"
-            android:parentActivityName=".activities.StartActivity" />
 
-        <activity android:name=".fragments.SignUpFragment"></activity>
     </application>
 
 </manifest>
