--- a/AmbChat/app/build.gradle
+++ b/AmbChat/app/build.gradle
@@ -36,12 +36,9 @@ dependencies {
     //noinspection GradleCompatible
     /* implementation 'com.google.firebase:firebase-core:11.8.0'*/
     implementation 'com.firebaseui:firebase-ui:0.6.0'
-    /*implementation 'com.google.firebase:firebase-messaging:11.8.0'
-    implementation 'com.google.firebase:firebase-database:11.8.0'
-    implementation 'com.google.firebase:firebase-auth:11.6.0'*/
 
     //noinspection GradleCompatible
-    /* implementation 'com.google.firebase:firebase-core:11.8.0'*/
+    implementation 'com.google.firebase:firebase-core:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
