--- a/AmbChat/app/src/main/AndroidManifest.xml
+++ b/AmbChat/app/src/main/AndroidManifest.xml
@@ -22,7 +22,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".notification.MyFirebaseIDService"
+            android:enabled="true"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTACE_ID_ENVENT"></action>
+            </intent-filter>
+        </service>
 
+        <service android:name=".notification.MyFirebaseMessaging"
+            android:enabled="true"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_ENVENT"></action>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
