--- a/AmbChat/app/src/main/AndroidManifest.xml
+++ b/AmbChat/app/src/main/AndroidManifest.xml
@@ -22,21 +22,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".notification.MyFirebaseIDService"
+        <service android:name=".notification.MyFirebaseIdService"
             android:enabled="true"
-            android:exported="true"
-            >
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTACE_ID_ENVENT"></action>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
 
         <service android:name=".notification.MyFirebaseMessaging"
             android:enabled="true"
-            android:exported="true"
-            >
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_ENVENT"></action>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
     </application>
